local-template/content/assets/css/untitled-ui.css
@import url('https://fonts.googleapis.com/css2?family=Inter:wght@300;400;500;600;700&display=swap');

body {
 font-family: 'Inter', -apple-system, BlinkMacSystemFont, "Segoe UI", Roboto, Helvetica, Arial, sans-serif;
}

:root {
  --ui-gray-50: #F9FAFB;
  --ui-gray-100: #F2F4F7;
  --ui-gray-200: #EAECF0;
  --ui-gray-300: #DBE1EA;
  --ui-gray-400: #98A2B3;
  --ui-gray-500: #6F7E97; 
  --ui-gray-600: #475467;
  --ui-gray-700: #344054;
  --ui-gray-800: #1D2939;
  --ui-gray-900: #101828;

  
  --ui-primary-50: #F0F9FF;
  --ui-primary-100: #E0F2FE;
  --ui-primary-600: #0086C9;
  --ui-primary-700: #026AA2;
  
  --ui-font-family: 'Inter', -apple-system, BlinkMacSystemFont, sans-serif;
  
  --ui-border-radius-sm: 6px;
  --ui-border-radius-md: 8px;
  --ui-border-radius-lg: 12px;
}

body {
  font-family: var(--ui-font-family);
  color: var(--ui-gray-900);
}

.ui-text-display {
  font-family: var(--ui-font-family);
  font-size: 36px;
  line-height: 44px;
  font-weight: 600;
  color: var(--ui-gray-900);
}

.ui-text-h1 {
  font-family: var(--ui-font-family);
  font-size: 30px;
  line-height: 38px;
  font-weight: 600;
  color: var(--ui-gray-900);
}

.ui-text-h2 {
  font-family: var(--ui-font-family);
  font-size: 24px;
  line-height: 32px;
  font-weight: 600;
  color: var(--ui-gray-900);
}

.ui-text-h3 {
  font-family: var(--ui-font-family);
  font-size: 20px;
  line-height: 30px;
  font-weight: 600;
  color: var(--ui-gray-900);
}

.ui-text-body-lg {
  font-family: var(--ui-font-family);
  font-size: 16px;
  line-height: 24px;
  font-weight: 400;
  color: var(--ui-gray-700);
}

.ui-text-body {
  font-family: var(--ui-font-family);
  font-size: 14px;
  line-height: 20px;
  font-weight: 400;
  color: var(--ui-gray-700);
}

.ui-text-md {
  font-family: var(--ui-font-family);
  font-size: 14px;
  line-height: 20px;
  font-weight: 500;
  color: var(--ui-gray-500);
}

.ui-text-sm {
  font-family: var(--ui-font-family);
  font-size: 12px;
  line-height: 18px;
  font-weight: 400;
  color: var(--ui-gray-600);
}

.ui-text-xs {
  font-family: var(--ui-font-family);
  font-size: 11px;
  line-height: 16px;
  font-weight: 400;
  color: var(--ui-gray-600);
}

.ui-text-regular {
  font-weight: 400;
}

.ui-text-medium {
  font-weight: 500;
}

.ui-text-semibold {
  font-weight: 600;
}

.ui-text-bold {
  font-weight: 700;
}

.ui-text-primary {
  color: var(--ui-primary-700);
}

.ui-text-error {
  color: #E83A3A;
}

.ui-text-success {
  color: #12B76A;
}

.ui-text-warning {
  color: #F79009;
}

.ui-text-subtle {
  color: var(--ui-gray-500);
}

.ui-button {
  display: flex;
  align-items: center;
  justify-content: center;
  padding: 10px 16px;
  background-color: white;
  border: 1px solid var(--ui-gray-300);
  border-radius: var(--ui-border-radius-md);
  font-weight: 500;
  font-size: 14px;
  color: var(--ui-gray-700);
}

.ui-button:hover {
  background-color: var(--ui-gray-50);
}

.ui-input {
  width: 100%;
  height: 40px;
  padding: 10px 8px;
  margin: 0 10px;
  border: 1px solid var(--ui-gray-300);
  border-radius: var(--ui-border-radius-md);
  font-size: 14px;
  font-weight: 400;
  color: var(--ui-gray-500);
}

.ui-input::placeholder {
  color: var(--ui-gray-500);
}

.ui-dropdown {
  position: relative;
}

.ui-dropdown-menu {
  display: none;
  position: absolute;
  min-width: 180px;
  background-color: white;
  border: 1px solid var(--ui-gray-200);
  border-radius: var(--ui-border-radius-md);
  box-shadow: 0px 4px 6px -2px rgba(16, 24, 40, 0.05);
  padding: 4px;
  z-index: 100;
}

.ui-dropdown-menu.show {
  display: block;
}

.ui-dropdown-item {
  display: block;
  padding: 8px 12px;
  font-size: 14px;
  color: var(--ui-gray-700);
  border-radius: 4px;
}

.ui-dropdown-item:hover {
  background-color: var(--ui-gray-50);
}

.nav-tabs .nav-link {
  color: #495057;
  font-weight: 500;
}

.nav-tabs .nav-link.active {
  background-color: #fdeae5;
  color: #b91c1c;
  border-color: #fdeae5;
}

.footer-link:hover {
  color: #3C4554 !important;
  text-decoration: none;
  transition: color 0.2s ease;
}

footer button.d-flex {
  background-color: transparent !important;
  transition: background-color 0.2s ease;
  border: 1px solid #D0D5DD;
}

footer button.d-flex:hover {
  background-color: white !important;
  border: none;
}

.nav-tabs li {
  padding: 0;
  margin: 0;
  position: relative;
  border: 1px solid #FFE5DE;
}

.nav-tabs li:first-child {
  border-top-left-radius: 8px;
  border-bottom-left-radius: 8px;
  border-right-width: 0.5px;
}

.nav-tabs li:last-child {
  border-top-right-radius: 8px;
  border-bottom-right-radius: 8px;
  border-left-width: 0.5px;
}

.nav-tabs li:not(:first-child):not(:last-child) {
  border-left-width: 0.5px;
  border-right-width: 0.5px;
}

.nav-tabs li a {
  display: flex;
  align-items: center;
  padding: 10px 16px;
  width: 100%;
  height: 100%;
  text-decoration: none;
  font-size: 14px;
  font-weight: 600;
  font-family: inter;
}

.nav-tabs li.active-tab {
  background-color: #FFE5DE;
}

.nav-tabs li.active-tab a {
  color: #B71616;
}

.nav-tabs li:first-child.active-tab {
  border-radius: 8px 0 0 8px;
}

.nav-tabs li:last-child.active-tab {
  border-radius: 0 8px 8px 0;
}

.nav-tabs li:hover {
  background-color: #FFE5DE;
  transition: background-color 0.2s ease;
}

.nav-tabs li:hover a {
  color: #B71616;
}

.nav-tabs li.active-tab:hover {
  background-color: #FFE5DE;
}

